4.0 regression: ALSA unusable as secondary input source
ALSA as secondary isource triggers the error Invalid url passed to the "input-slave" option
and is ignored. This makes recording audio from an analog audio/video (V4L2) source impossible.
Most probably caused by bbdaa0b6.
Related merge requests 1
When this merge request is accepted, this issue will be closed automatically.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont changed milestone to %3.0.x maintenance
changed milestone to %3.0.x maintenance
- Rémi Denis-Courmont added Component::Core: Input label
added Component::Core: Input label
- Rémi Denis-Courmont cloned from #26054 (closed)
cloned from #26054 (closed)
- Rémi Denis-Courmont changed title from 3.0.16 regression: ALSA unusable as secondary input source to 4.0 regression: ALSA unusable as secondary input source
changed title from 3.0.16 regression: ALSA unusable as secondary input source to 4.0 regression: ALSA unusable as secondary input source
- Rémi Denis-Courmont changed the description
changed the description
- Rémi Denis-Courmont changed milestone to %4.0
changed milestone to %4.0
- Thomas Guillem assigned to @tguillem
assigned to @tguillem
- Thomas Guillem assigned to @asenat and unassigned @tguillem
- Developer
Even worse, tried it with
alsa://
oralsa://null
and it just segfaults because a NULL path from the url parser isn't handled properly.@Courmisch Could you share the exact MRL that cause
vlc_UrlParse
to fail though ? I have trouble reproducing the same behavior as yours.Edited by Alaric Senat - Author Maintainer
AFAIK, literally any ALSA MRL will fail. See also fora.
Edited by Rémi Denis-Courmont Collapse replies - Author Maintainer
Well OK, I suppose dumb stuff will not fail, but even the most basic
plughw
/hw
input will. - Please register or sign in to reply
- Alaric Senat mentioned in merge request !563 (merged)
mentioned in merge request !563 (merged)
- Alaric Senat closed with commit 85e1eb7a
closed with commit 85e1eb7a
- Hugo Beauzée-Luyssen closed with merge request !563 (merged)
closed with merge request !563 (merged)