input: fix input-slave url parsing regression

Fix a regression introduced by bbdaa0b64a0626282d1dca2051c233969f00e1d7
where some access MRL would, by design, make the url parsing fail.
Url parsing failing should not be a blocker to add the input slave,
instead we just warn the user that we couldn't deduce the slave file
type based on the given MRL.

Fixes #26055